Fixed hours today alignment on location and division pages

--- a/public/css/partials/_single-location.scss
+++ b/public/css/partials/_single-location.scss
@@ -57,8 +57,8 @@
 			}
 
 			.hours-today {
-				font-size: 14px;
-				font-size: 1.4rem;
+				font-size: 13px;
+				font-size: 1.3rem;
 
 				@include breakpoint($min, $post-palm) {
 					font-size: 16px;
@@ -66,7 +66,7 @@
 				}		
 
 				span {
-					vertical-align: -2px;
+					vertical-align: 1px;
 				}
 			}
 		}
